fix: make mail RFC compliant and improve 2fa verify token handling
